CCD-7988 Add rich text area as a base type